--- a/src/main/resources/templates/mf-details.html
+++ b/src/main/resources/templates/mf-details.html
@@ -20,12 +20,14 @@
                 <th>Fund House</th>
                 <th>Scheme Type</th>
                 <th>Scheme Category</th>
+                <th>Average NAV</th>
             </tr>
             <tr>
                 <td th:text="${detail.meta.scheme_code}"></td>
                 <td th:text="${detail.meta.fund_house}"></td>
                 <td th:text="${detail.meta.scheme_type}"></td>
                 <td th:text="${detail.meta.scheme_category}"></td>
+                <td th:text="${detail.meta.averageNav}"></td>
             </tr>
         </table>
 
